--- a/styles/projects.css
+++ b/styles/projects.css
@@ -134,6 +134,8 @@
 
 .projectWrapper .modal .img img {
     height: inherit;
+    width: 100%;
+    object-fit: cover;
 }
 
 @media only screen and (max-width:550px){
@@ -172,6 +174,12 @@
     /*modal*/
     .projectWrapper .modal .img {
         overflow-x: scroll;
+    }
+
+    .projectWrapper .modal .img img {
+        height: inherit;
+        width: unset;
+        object-fit: unset;
     }
 }
 
